--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,5 @@
 
-<!-- saved from url=(0067)http://mariastefanovna.ru/instrumentarium/english_transcription.htm -->
 <html><script type="text/javascript" src="chrome-extension://kajfghlhfkcocafkcjlajldicbikpgnp/catcher.js"><!-- script injected by Request Maker --></script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style>
-<!-- saved from url=(0026)http://mariastefanovna.ru/ -->
 
   
   <title>Английская транскрипция</title>
@@ -62,9 +60,9 @@
  <body>
  <table width="100%" cellpadding="0">
    <tbody><tr>
-    <td valign="middle" align="center" width="100%" bgcolor="#f0f0f0">  
-	<div style="margin:0; padding: 20px; width: 860px; height: 330px; background: #556; border-radius: 20px; clear:both; display: inline-block;">
-   <textarea id="texto" class="agro" style="width: 860px; max-width: 860px; height: 320px; max-height: 320px; border: 0; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка, используемая для обучения. Наберите текст здесь с помощью виртуальной клавиатуры внизу, а затем скопируйте и вставьте в свой word-документ." spellcheck="false"></textarea><br>
+    <td valign="middle" align="center" width="100%" bgcolor="#E4E4E4">  
+	<div style="margin:0; padding: 20px; width: 400px; height: 230px; background: #556; border-radius: 25px; clear:both; display: inline-block;">
+   <textarea id="texto" class="agro" style="width: 400px; max-width: 400px; height: 220px; max-height: 220px; border: 0; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка, используемая для обучения. Наберите текст здесь с помощью виртуальной клавиатуры внизу, а затем скопируйте и вставьте в свой word-документ." spellcheck="false"></textarea><br>
    </div><br>
       <div style="text-align: center; width: 880px; border-radius: 20px; margin:5px; padding: 10px; display: inline-block; border-style: outset; background: #ccf;">
 <button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
