--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
   }
   .agro {
   font-family: "Lucida Sans Unicode", Arial, sans-serif;
-  font-size: 18pt; 
+  font-size: 14pt; 
   }
   button {
   font-family: "Lucida Sans Unicode", Arial, sans-serif;
@@ -55,14 +55,17 @@
   border-radius: 10px;
   margin-bottom: 5px;
   }
+  shadow {
+    box-shadow: 5px 10px;
+  }
   </style>
  </head>
  <body>
  <table width="100%" cellpadding="0">
    <tbody><tr>
     <td valign="middle" align="center" width="100%" bgcolor="#E4E4E4">  
-	<div style="margin:0; padding: 20px; width: 400px; height: 230px; background: #556; border-radius: 25px; clear:both; display: inline-block;">
-   <textarea id="texto" class="agro" style="width: 400px; max-width: 400px; height: 220px; max-height: 220px; border: 0; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка, используемая для обучения. Наберите текст здесь с помощью виртуальной клавиатуры внизу, а затем скопируйте и вставьте в свой word-документ." spellcheck="false"></textarea><br>
+	<div class="shadow" style="margin:0; padding: 20px; width: 400px; height: 100px; background: #556; border-radius: 25px; clear:both; display: inline-block;">
+   <textarea id="texto" class="agro" style="width: 400px; max-width: 400px; height: 100px; max-height: 100px; border: 0; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка, используемая для обучения. Наберите текст здесь с помощью виртуальной клавиатуры внизу, а затем скопируйте и вставьте в свой word-документ." spellcheck="false"></textarea><br>
    </div><br>
       <div style="text-align: center; width: 880px; border-radius: 20px; margin:5px; padding: 10px; display: inline-block; border-style: outset; background: #ccf;">
 <button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
