--- a/templates/index.html
+++ b/templates/index.html
@@ -105,14 +105,11 @@ button.copy_but{
     <div style="margin:0; padding: 20px; width: 600px; height: 200px; background: #E4E4E4; border-radius: 25px; clear:both; display: inline-block;">
      <textarea id="texto" class="agro" style="width: 500px; max-width: 500px; height: 150px; max-height: 150px; border: 0; border-radius: 25px; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка. Наберие текст с помощью виртуальной клавиатуры." spellcheck="false"></textarea><br>
     </div>
-     <button onclick="myFunction()" class="copy_but" style="top:50px;"><img src="icons/remov.png" /></button>
-     <button onclick="myFunction()" class="copy_but" style="top:135px;"><img src="icons/imp.png" /></button>
+     <button onclick="myFunction()" class="copy_but" style="top:80px;"><img src="remov.png" /></button>
+     <button onclick="myFunction()" class="copy_but" style="top:165px;"><img src="imp.png" /></button>
     
-    </td>
-  </tr>
+
   <br>
-  <tr>
-  <td valign="middle" align="center" width="100%" bgcolor="#E4E4E4">
       <div  style="text-align: center; margin-top: 100px; width: 880px; border-radius: 25px; margin:5px; padding: 10px; display: inline-block;  background: #E4E4E4; ">
 <button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
 <button onclick="L = &#39;a&#39;; scriptor()">a</button>
@@ -171,7 +168,6 @@ button.copy_but{
 <button onclick="L = &#39;:&#39;; scriptor()">:</button>
 <button onclick="L = &#39; &#39;; scriptor()" style="width: 105px;">&nbsp;</button>
 <br>
-<button onclick="myFunction()" style="width: 105px;">Copy</button>
    </div><br>
  </td>
    </tr>
