--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,3 @@
-
 <html><script type="text/javascript" src="chrome-extension://kajfghlhfkcocafkcjlajldicbikpgnp/catcher.js"><!-- script injected by Request Maker --></script><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style>
 
   
@@ -7,15 +6,15 @@
    var L = " ";
    function bspce(el){
     var val = el.value, endIndex;
-	    if (el.selectionEnd != 0)	{
-	       endIndex = el.selectionEnd - 1;
+        if (el.selectionEnd != 0)	{
+           endIndex = el.selectionEnd - 1;
            el.value = val.slice(0, endIndex) + val.slice(endIndex + 1);
            el.selectionStart = el.selectionEnd = endIndex;
-		}
+        }
     el.focus();
-		}
+        }
 
-	function insertTextAtCursor(el, text) {
+    function insertTextAtCursor(el, text) {
     var val = el.value, endIndex;
         endIndex = el.selectionEnd;
         text.sub()
@@ -57,8 +56,8 @@
   width: 100%;
   }
   .agro {
-  font-family: "Lucida Sans Unicode", Arial, sans-serif;
-  font-size: 13pt;
+  font-family:  Georgia, 'Times New Roman', Times, serif;
+  font-size: 14pt;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
   }
@@ -78,20 +77,88 @@
   shadow {
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   }
-.container{
-  overflow:hidden;}
-.box{
-  white-space:nowrap}
-.box div{
-  width:90px;
-  display:inline-block;}
+  .container {  display: grid;
+      grid-template-columns: 1fr 0.8fr 1.2fr 0.7fr 0.7fr 1.6fr 1fr;
+      grid-template-rows: 1.2fr 1.1fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        ". textarea textarea textarea textarea but-2 ."
+        ". keyboard keyboard keyboard keyboard keyboard .";
+    }
+    
+    .container {  display: grid;
+      grid-template-columns: 1fr 0.8fr 1.2fr 0.7fr 0.7fr 1.6fr 1fr;
+      grid-template-rows: 1.2fr 1.1fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        ". textarea textarea textarea textarea but-2 ."
+        ". keyboard keyboard keyboard keyboard keyboard .";
+    }
+    
+    .textarea {  display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 0.3fr 1.9fr 0.8fr;
+      grid-auto-columns: 1fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        ". . ."
+        ". . text"
+        ". . .";
+      grid-area: textarea;
+    }
+    
+    .text { grid-area: text; }
+    
+    .but-2 {  display: grid;
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.8fr 1.2fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        "b-1"
+        "b-2";
+      grid-area: but-2;
+    }
+    
+    .b-1 {  display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 0.4fr 1.6fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        ". ."
+        "bt1 .";
+      grid-area: b-1;
+    }
+    
+    .bt1 { grid-area: bt1; }
+    
+    .b-2 {  display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 0.5fr 1.4fr 1.4fr;
+      gap: 0px 0px;
+      grid-auto-flow: row;
+      grid-template-areas:
+        ". ."
+        "bt2 ."
+        ". .";
+      grid-area: b-2;
+    }
+    
+    .bt2 { grid-area: bt2; }
+    
+    .keyboard { grid-area: keyboard; }
+    
 button.copy_but{
   position: absolute;
-  width: 65px;
-  height: 65px;
+  width: 50px;
+  height: 50px;
   background: #FFFFFF;
-  box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.25);
-  border-radius: 15px;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+  border-radius: 10px;
 }
   
   </style>
@@ -99,77 +166,83 @@ button.copy_but{
  <body>
  <table width="100%" cellpadding="0">
    <tbody><tr>
-    <td valign="middle" align="center" width="100%" bgcolor="#E4E4E4">  
-
-
-    <div style="margin:0; padding: 20px; width: 600px; height: 200px; background: #E4E4E4; border-radius: 25px; clear:both; display: inline-block;">
-     <textarea id="texto" class="agro" style="width: 500px; max-width: 500px; height: 150px; max-height: 150px; border: 0; border-radius: 25px; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="Транскрипция для английского языка. Наберие текст с помощью виртуальной клавиатуры." spellcheck="false"></textarea><br>
-    </div>
-     <button onclick="myFunction()" class="copy_but" style="top:80px;"><img src="remov.png" /></button>
-     <button onclick="myFunction()" class="copy_but" style="top:165px;"><img src="imp.png" /></button>
-    
+    <td valign="middle" align="center" width="100%" bgcolor="#E4E4E4">
+      <div class="container">
+          <div class="textarea" style="margin:0; padding: 20px; width: 600px; height: 200px; background: #E4E4E4; border-radius: 25px; clear:both; display: inline-block;">
+              <div class="text">
+                  <textarea id="texto" class="agro" style="width: 500px; max-width: 500px; height: 150px; max-height: 150px; border: 0; border-radius: 25px; padding-left: 20px; padding-right: 20px;  padding-top: 10px;  padding-bottom: 10px;" placeholder="keyboard for transcribing." spellcheck="false"></textarea><br></div>
+          </div>
+          <div class="but-2">
+              <div class="b-1">
+                  <div class="bt1">
+                      </div></div>
+              <div class="b-2">
+                  <div class="bt2">
+                      <button onclick="myFunction()" class="copy_but"><img src="rem.png" /></button></div></div></div>
+          <div class="keyboard" >
+              <button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
+              <button onclick="L = &#39;a&#39;; scriptor()">a</button>
+              <button onclick="L = &#39;ʌ&#39;; scriptor()">ʌ</button>
+              <button onclick="L = &#39;ə&#39;; scriptor()">ə</button>
+              <button onclick="L = &#39;ɛ&#39;; scriptor()">ɛ</button>
+              <button onclick="L = &#39;æ&#39;; scriptor()">æ</button>
+              <button onclick="L = &#39;ɜ&#39;; scriptor()">ɜ</button>
+              <button onclick="L = &#39;ʒ&#39;; scriptor()">ʒ</button>
+              <button onclick="L = &#39;ı&#39;; scriptor()">ı</button>
+              <button onclick="L = &#39;ɪ&#39;; scriptor()">ɪ</button>
+              <button onclick="L = &#39;ŋ&#39;; scriptor()">ŋ</button>
+              <button onclick="L = &#39;ɔ&#39;; scriptor()">ɔ</button>
+              <button onclick="L = &#39;ɒ&#39;; scriptor()">ɒ</button>
+              <button onclick="L = &#39;ʃ&#39;; scriptor()">ʃ</button>
+              <br>
+              <button onclick="L = &#39;ð&#39;; scriptor()">ð</button>
+              <button onclick="L = &#39;θ&#39;; scriptor()">θ</button>
+              <button onclick="L = &#39;ʤ&#39;; scriptor()">ʤ</button>
+              <button onclick="L = &#39;ʊ&#39;; scriptor()">ʊ</button>
+              <button onclick="L = &#39;b&#39;; scriptor()">b</button>
+              <button onclick="L = &#39;d&#39;; scriptor()">d</button>
+              <button onclick="L = &#39;e&#39;; scriptor()">e</button>
+              <button onclick="L = &#39;f&#39;; scriptor()">f</button>
+              <button onclick="L = &#39;g&#39;; scriptor()">g</button>
+              <button onclick="L = &#39;h&#39;; scriptor()">h</button>
+              <button onclick="L = &#39;i&#39;; scriptor()">i</button>
+              <button onclick="L = &#39;j&#39;; scriptor()">j</button>
+              <button onclick="L = &#39;k&#39;; scriptor()">k</button>
+              <button onclick="L = &#39;l&#39;; scriptor()">l</button>
+              <br>
+              <button onclick="L = &#39;m&#39;; scriptor()">m</button>
+              <button onclick="L = &#39;n&#39;; scriptor()">n</button>
+              <button onclick="L = &#39;p&#39;; scriptor()">p</button>
+              <button onclick="L = &#39;r&#39;; scriptor()">r</button>
+              <button onclick="L = &#39;ʧ&#39;; scriptor()">ʧ</button>
+              <button onclick="L = &#39;s&#39;; scriptor()">s</button>
+              <button onclick="L = &#39;t&#39;; scriptor()">t</button>
+              <button onclick="L = &#39;u&#39;; scriptor()">u</button>
+              <button onclick="L = &#39;v&#39;; scriptor()">v</button>
+              <button onclick="L = &#39;w&#39;; scriptor()">w</button>
+              <button onclick="L = &#39;z&#39;; scriptor()">z</button>
+              <button onclick="L = &#39;[&#39;; scriptor()">[</button>
+              <button onclick="L = &#39;]&#39;; scriptor()">]</button>
+              <br>
+              <button onclick="L = &#39;ˎ&#39;; scriptor()">ˎ</button>
+              <button onclick="L = &#39;ˏ&#39;; scriptor()">ˏ</button>
+              <button onclick="L = &#39;ˋ&#39;; scriptor()">ˋ</button>
+              <button onclick="L = &#39;ˊ&#39;; scriptor()">ˊ</button>
+              <button onclick="L = &#39;̬&#39;; scriptor()">̬</button>
+              <button onclick="L = &#39;̭&#39;; scriptor()">̭</button>
+              <button onclick="L = &#39;ǀ&#39;; scriptor()">ǀ</button>
+              <button onclick="L = &#39;ǁ&#39;; scriptor()">ǁ</button>
+              <button onclick="L = &#39;ˌ&#39;; scriptor()">ˌ</button>
+              <button onclick="L = &#39;ˈ&#39;; scriptor()">ˈ</button>
+              <button onclick="L = &#39;:&#39;; scriptor()">:</button>
+              <button onclick="L = &#39; &#39;; scriptor()" style="width: 105px;">&nbsp;</button>
+          </div>
+        </div>
 
   <br>
-      <div  style="text-align: center; margin-top: 100px; width: 880px; border-radius: 25px; margin:5px; padding: 10px; display: inline-block;  background: #E4E4E4; ">
-<button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
-<button onclick="L = &#39;a&#39;; scriptor()">a</button>
-<button onclick="L = &#39;ʌ&#39;; scriptor()">ʌ</button>
-<button onclick="L = &#39;ə&#39;; scriptor()">ə</button>
-<button onclick="L = &#39;ɛ&#39;; scriptor()">ɛ</button>
-<button onclick="L = &#39;æ&#39;; scriptor()">æ</button>
-<button onclick="L = &#39;ɜ&#39;; scriptor()">ɜ</button>
-<button onclick="L = &#39;ʒ&#39;; scriptor()">ʒ</button>
-<button onclick="L = &#39;ı&#39;; scriptor()">ı</button>
-<button onclick="L = &#39;ɪ&#39;; scriptor()">ɪ</button>
-<button onclick="L = &#39;ŋ&#39;; scriptor()">ŋ</button>
-<button onclick="L = &#39;ɔ&#39;; scriptor()">ɔ</button>
-<button onclick="L = &#39;ɒ&#39;; scriptor()">ɒ</button>
-<button onclick="L = &#39;ʃ&#39;; scriptor()">ʃ</button>
-<br>
-<button onclick="L = &#39;ð&#39;; scriptor()">ð</button>
-<button onclick="L = &#39;θ&#39;; scriptor()">θ</button>
-<button onclick="L = &#39;ʤ&#39;; scriptor()">ʤ</button>
-<button onclick="L = &#39;ʊ&#39;; scriptor()">ʊ</button>
-<button onclick="L = &#39;b&#39;; scriptor()">b</button>
-<button onclick="L = &#39;d&#39;; scriptor()">d</button>
-<button onclick="L = &#39;e&#39;; scriptor()">e</button>
-<button onclick="L = &#39;f&#39;; scriptor()">f</button>
-<button onclick="L = &#39;g&#39;; scriptor()">g</button>
-<button onclick="L = &#39;h&#39;; scriptor()">h</button>
-<button onclick="L = &#39;i&#39;; scriptor()">i</button>
-<button onclick="L = &#39;j&#39;; scriptor()">j</button>
-<button onclick="L = &#39;k&#39;; scriptor()">k</button>
-<button onclick="L = &#39;l&#39;; scriptor()">l</button>
-<br>
-<button onclick="L = &#39;m&#39;; scriptor()">m</button>
-<button onclick="L = &#39;n&#39;; scriptor()">n</button>
-<button onclick="L = &#39;p&#39;; scriptor()">p</button>
-<button onclick="L = &#39;r&#39;; scriptor()">r</button>
-<button onclick="L = &#39;ʧ&#39;; scriptor()">ʧ</button>
-<button onclick="L = &#39;s&#39;; scriptor()">s</button>
-<button onclick="L = &#39;t&#39;; scriptor()">t</button>
-<button onclick="L = &#39;u&#39;; scriptor()">u</button>
-<button onclick="L = &#39;v&#39;; scriptor()">v</button>
-<button onclick="L = &#39;w&#39;; scriptor()">w</button>
-<button onclick="L = &#39;z&#39;; scriptor()">z</button>
-<button onclick="L = &#39;[&#39;; scriptor()">[</button>
-<button onclick="L = &#39;]&#39;; scriptor()">]</button>
-<br>
-<button onclick="L = &#39;ˎ&#39;; scriptor()">ˎ</button>
-<button onclick="L = &#39;ˏ&#39;; scriptor()">ˏ</button>
-<button onclick="L = &#39;ˋ&#39;; scriptor()">ˋ</button>
-<button onclick="L = &#39;ˊ&#39;; scriptor()">ˊ</button>
-<button onclick="L = &#39;̬&#39;; scriptor()">̬</button>
-<button onclick="L = &#39;̭&#39;; scriptor()">̭</button>
-<button onclick="L = &#39;ǀ&#39;; scriptor()">ǀ</button>
-<button onclick="L = &#39;ǁ&#39;; scriptor()">ǁ</button>
-<button onclick="L = &#39;ˌ&#39;; scriptor()">ˌ</button>
-<button onclick="L = &#39;ˈ&#39;; scriptor()">ˈ</button>
-<button onclick="L = &#39;:&#39;; scriptor()">:</button>
-<button onclick="L = &#39; &#39;; scriptor()" style="width: 105px;">&nbsp;</button>
-<br>
    </div><br>
  </td>
    </tr>
   </tbody></table> 
 </body></html>
+
