--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,7 @@ button.copy_but{
                       </div></div>
               <div class="b-2">
                   <div class="bt2">
-                      <button onclick="myFunction()" class="copy_but"><img src="https://raw.githubusercontent.com/lilovy/transcribe-keyboard/main/templates/rem.png?token=GHSAT0AAAAAABWHQSLJATV3TIUBDYR4DCU6YWQBW6A" /></button></div></div></div>
+                      <button onclick="myFunction()" class="copy_but"><img src="https://ibb.co/Stwszgd" /></button></div></div></div>
           <div class="keyboard" >
               <button onclick="L = &#39;ɑ&#39;; scriptor()">ɑ</button>
               <button onclick="L = &#39;a&#39;; scriptor()">a</button>
