--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,15 @@
     alert("Copied the text: " + copyText.value);
   }
   </script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2RNEK0RWJG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2RNEK0RWJG');
+</script>
   <style type="text/css">
   html {
   height: 100%;
