--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,8 @@
   border:none;
   background-color:#E4E4E4;
   border-radius: 10px;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
+  margin-right: 5px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 
   }
@@ -96,15 +97,6 @@
         ". keyboard keyboard keyboard keyboard keyboard .";
     }
     
-    .container {  display: grid;
-      grid-template-columns: 1fr 0.8fr 1.2fr 0.7fr 0.7fr 1.6fr 1fr;
-      grid-template-rows: 1.2fr 1.1fr;
-      gap: 0px 0px;
-      grid-auto-flow: row;
-      grid-template-areas:
-        ". textarea textarea textarea textarea but-2 ."
-        ". keyboard keyboard keyboard keyboard keyboard .";
-    }
     
     .textarea {  display: grid;
       grid-template-columns: 1fr 1fr 1fr;
@@ -193,18 +185,16 @@ button.copy_but{
               <button onclick="L = &#39;a&#39;; scriptor()">a</button>
               <button onclick="L = &#39;ʌ&#39;; scriptor()">ʌ</button>
               <button onclick="L = &#39;ə&#39;; scriptor()">ə</button>
-              <button onclick="L = &#39;ɛ&#39;; scriptor()">ɛ</button>
               <button onclick="L = &#39;æ&#39;; scriptor()">æ</button>
               <button onclick="L = &#39;ɜ&#39;; scriptor()">ɜ</button>
               <button onclick="L = &#39;ʒ&#39;; scriptor()">ʒ</button>
-              <button onclick="L = &#39;ı&#39;; scriptor()">ı</button>
               <button onclick="L = &#39;ɪ&#39;; scriptor()">ɪ</button>
               <button onclick="L = &#39;ŋ&#39;; scriptor()">ŋ</button>
               <button onclick="L = &#39;ɔ&#39;; scriptor()">ɔ</button>
               <button onclick="L = &#39;ɒ&#39;; scriptor()">ɒ</button>
               <button onclick="L = &#39;ʃ&#39;; scriptor()">ʃ</button>
-              <br>
               <button onclick="L = &#39;ð&#39;; scriptor()">ð</button>
+              <br>
               <button onclick="L = &#39;θ&#39;; scriptor()">θ</button>
               <button onclick="L = &#39;ʤ&#39;; scriptor()">ʤ</button>
               <button onclick="L = &#39;ʊ&#39;; scriptor()">ʊ</button>
@@ -241,7 +231,6 @@ button.copy_but{
               <button onclick="L = &#39;̭&#39;; scriptor()">̭</button>
               <button onclick="L = &#39;ǀ&#39;; scriptor()">ǀ</button>
               <button onclick="L = &#39;ǁ&#39;; scriptor()">ǁ</button>
-              <button onclick="L = &#39;ˌ&#39;; scriptor()">ˌ</button>
               <button onclick="L = &#39;ˈ&#39;; scriptor()">ˈ</button>
               <button onclick="L = &#39;:&#39;; scriptor()">:</button>
               <button onclick="L = &#39; &#39;; scriptor()" style="width: 105px;">&nbsp;</button>
