--- a/templates/index.html
+++ b/templates/index.html
@@ -102,17 +102,13 @@
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
   }
   .container {  display: grid;
-      grid-template-columns: 1fr 0.8fr 0.8fr 1.1fr 0.7fr 1.6fr 1fr;
-      grid-template-rows: 0.1fr 1.1fr 0.3fr 2.3fr;
-      grid-auto-columns: 1fr;
-      grid-auto-rows: 1fr;
+      grid-template-columns: 1fr 1.3fr 0.7fr 1fr 1fr 1fr;
+      grid-template-rows: 1.1fr 1fr;
       gap: 0px 0px;
       grid-auto-flow: row;
       grid-template-areas:
-        ". . . . . . ."
-        ". . . text b . ."
-        ". . . . . . ."
-        ". keyboard keyboard keyboard keyboard keyboard .";
+        ". . text b . ."
+        ". keyboard keyboard keyboard keyboard .";
     }
     
     .keyboard { grid-area: keyboard; }
