--- a/templates/index.html
+++ b/templates/index.html
@@ -203,8 +203,8 @@ button.copy_but{
               <button onclick="L = &#39;ˏ&#39;; scriptor()">ˏ</button>
               <button onclick="L = &#39;ˋ&#39;; scriptor()">ˋ</button>
               <button onclick="L = &#39;ˊ&#39;; scriptor()">ˊ</button>
-              <button onclick="L = &#39;̬&#39;; scriptor()">̬</button>
-              <button onclick="L = &#39;̭&#39;; scriptor()">̭</button>
+              <button onclick="L = &#39;˅&#39;; scriptor()">˅</button>
+              <button onclick="L = &#39;˄&#39;; scriptor()">˄</button>
               <button onclick="L = &#39;ǀ&#39;; scriptor()">ǀ</button>
               <button onclick="L = &#39;ǁ&#39;; scriptor()">ǁ</button>
               <button onclick="L = &#39;ˈ&#39;; scriptor()">ˈ</button>
