--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,8 @@
   ym(89582294, "init", {
        clickmap:true,
        trackLinks:true,
-       accurateTrackBounce:true
+       accurateTrackBounce:true,
+       webvisor:true
   });
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/89582294" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
